corpus/cpp/overload/case-08/snapshots/gcc15/render.ci.txt
note: some compiler details were not fully structured; original diagnostics are preserved
src/main.cpp:6:5: error: [type_mismatch] type or overload mismatch
help: compare the expected type and actual argument at the call site
want: int&
got : const char*&
via : void takes_ref(int&) @ src/main.cpp:1:6  +1 candidate
| src/main.cpp:6:5
|     takes_ref(value);
|     ^

src/main.cpp:6:15: error: [type_mismatch] type or overload mismatch
help: compare the expected type and actual argument at the call site
raw : src/main.cpp:6:15: error: invalid conversion from 'const char*' to 'int' [-fpermissive]
| src/main.cpp:6:15
|     takes_ref(value);
|               ^
raw:
  src/main.cpp:6:15: error: invalid conversion from 'const char*' to 'int' [-fpermissive]

src/main.cpp:6:15: error: [type_mismatch] type or overload mismatch
help: compare the expected type and actual argument at the call site
raw : src/main.cpp:6:15: error: invalid conversion from 'const char*' to 'long int' [-fpermissive]
| src/main.cpp:6:15
|     takes_ref(value);
|               ^
raw:
  src/main.cpp:6:15: error: invalid conversion from 'const char*' to 'long int' [-fpermissive]

src/main.cpp:6:15: error: [incomplete_type] invalid pointer or reference operation
help: provide the full type definition via #include or fix the value category
raw : src/main.cpp:6:15: error: cannot bind rvalue '(int)value' to 'int&'
| src/main.cpp:6:15
|     takes_ref(value);
|               ^
note: src/main.cpp:2:6: note: candidate 2: 'void takes_ref(long int&)' (near match)
note: src/main.cpp:2:6: note: conversion of argument 1 would be ill-formed:
raw:
  src/main.cpp:6:15: error: cannot bind rvalue '(int)value' to 'int&'

src/main.cpp:6:15: error: [incomplete_type] invalid pointer or reference operation
help: provide the full type definition via #include or fix the value category
raw : src/main.cpp:6:15: error: cannot bind rvalue '(long int)value' to 'long int&'
| src/main.cpp:6:15
|     takes_ref(value);
|               ^
raw:
  src/main.cpp:6:15: error: cannot bind rvalue '(long int)value' to 'long int&'
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output